[package]
name = "webtransport_echo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.1.0"
anyhow = "1.0.60"
bytes = "1.4.0"
futures = "0.3.26"
http = "0.2.9"
quinn = { version = "0.10.1", features = ["runtime-tokio", "tls-rustls", "ring"] }
rustls = { version = "0.21.2", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
sec-http3 = "0.1.2"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
